(#10) simplify error to avoid loading FastJEngine class